--- a/djangoAdvanced/myapp/templates/register.html
+++ b/djangoAdvanced/myapp/templates/register.html
@@ -22,14 +22,16 @@
     </div>
     <div id="form" class="border-1 w-[400px] h-[500px] mx-auto justify-center items-center rounded-lg mt-10 p-2 ">
         <div class="bg-transparent shadow-md m-2 p-5">
-            <h2 class="text-2xl font-serif font-extrabold text-center m-2">Login</h2>
+            <h2 class="text-2xl font-serif font-extrabold text-center m-2">Register</h2>
             <!-- Login form -->
             <form class="flex flex-col justify-center items-center space-y-2">
-                <input type="text" name="username" placeholder="Username" class="outline-none rounded-md w-[300px] h-[50px] p-2">
-                <input type="password" name="password" placeholder="Password" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
+                <input type="email" name="email" placeholder="Email" class="outline-none rounded-md w-[300px] h-[50px] p-2">
+                <input type="text" name="username" placeholder="Username" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
+                <input type="password" name="password" placeholder="Password" class="outline-none rounded-md w-[300px] h-[50px] p-2">
+                <input type="password" name="confirmpassword" placeholder="Confirm Password" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
                 <div class="flex flex-row mx-auto items-center justify-center space-x-2">
-                    <input type="submit" name="submit" value="Login" class=" outline-none rounded-md w-auto h-auto p-1 bg-green-500 hover:bg-green-600 text-white font-bold">
-                <a href="register" class="text-sm font-serif font-extralight hover:underline hover:text-blue-500">Sign Up?</a>
+                    <input type="submit" name="submit" value="Register" class=" outline-none rounded-md w-auto h-auto p-1 bg-green-500 hover:bg-green-600 text-white font-bold">
+                <a href="#" class="text-sm font-serif font-extralight hover:underline hover:text-blue-500">Sign In?</a>
                 </div>
             </form>
         </div>
