--- a/djangoAdvanced/myapp/templates/register.html
+++ b/djangoAdvanced/myapp/templates/register.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{%load block_content  %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +25,8 @@
         <div class="bg-transparent shadow-md m-2 p-5">
             <h2 class="text-2xl font-serif font-extrabold text-center m-2">Register</h2>
             <!-- Login form -->
-            <form class="flex flex-col justify-center items-center space-y-2">
+            <form class="flex flex-col justify-center items-center space-y-2" method="post" action="">
+                {% csrf_token %}
                 <input type="email" name="email" placeholder="Email" class="outline-none rounded-md w-[300px] h-[50px] p-2">
                 <input type="text" name="username" placeholder="Username" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
                 <input type="password" id="password" name="password" placeholder="Password" class="outline-none rounded-md w-[300px] h-[50px] p-2">
@@ -50,4 +52,5 @@
         }
     })
 </script>
+{% endblock  %}
 </html>
