--- a/djangoAdvanced/myapp/templates/register.html
+++ b/djangoAdvanced/myapp/templates/register.html
@@ -1,5 +1,5 @@
 {% load static tailwind_tags %}
-{%load block_content  %}
+{% comment %} {%load block  %} {% endcomment %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -52,5 +52,5 @@
         }
     })
 </script>
-{% endblock  %}
+{% comment %} {% endblock  %} {% endcomment %}
 </html>
