--- a/djangoAdvanced/myapp/templates/index.html
+++ b/djangoAdvanced/myapp/templates/index.html
@@ -1,8 +1,9 @@
 {% load static tailwind_tags %}
+{% block content%}
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>Login</title>
     {% tailwind_css %}
 </head>
 <body class="bg-gray-200 h-[100vh]">
@@ -23,8 +24,12 @@
     <div id="form" class="border-1 w-[400px] h-[500px] mx-auto justify-center items-center rounded-lg mt-10 p-2 ">
         <div class="bg-transparent shadow-md m-2 p-5">
             <h2 class="text-2xl font-serif font-extrabold text-center m-2">Login</h2>
+            {% if error %}
+                <p class="error m-2 mx-auto items-center justfy-center flex text-red-400">{{ error }}</p>
+            {% endif %}
             <!-- Login form -->
-            <form class="flex flex-col justify-center items-center space-y-2">
+            <form class="flex flex-col justify-center items-center space-y-2" {% url 'login'%} method="post">
+                {% csrf_token %}
                 <input type="text" name="username" placeholder="Username" class="outline-none rounded-md w-[300px] h-[50px] p-2">
                 <input type="password" name="password" placeholder="Password" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
                 <div class="flex flex-row mx-auto items-center justify-center space-x-2">
@@ -35,4 +40,5 @@
         </div>
     </div>
 </body>
+{% endblock %}
 </html>
