--- a/djangoAdvanced/myapp/templates/index.html
+++ b/djangoAdvanced/myapp/templates/index.html
@@ -25,15 +25,15 @@
         <div class="bg-transparent shadow-md m-2 p-5">
             <h2 class="text-2xl font-serif font-extrabold text-center m-2">Login</h2>
             {% if error %}
-                <p class="error m-2 mx-auto items-center justfy-center flex text-red-400">{{ error }}</p>
+                <p class="m-2 mx-auto items-center justfy-center flex text-red-400">{{ error }}</p>
             {% endif %}
             <!-- Login form -->
-            <form class="flex flex-col justify-center items-center space-y-2" {% url 'login'%} method="post">
+            <form class="flex flex-col justify-center items-center space-y-2" method="post" action={% url 'login'%}>
                 {% csrf_token %}
                 <input type="text" name="username" placeholder="Username" class="outline-none rounded-md w-[300px] h-[50px] p-2">
                 <input type="password" name="password" placeholder="Password" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
                 <div class="flex flex-row mx-auto items-center justify-center space-x-2">
-                    <input type="submit" name="submit" value="Login" class=" outline-none rounded-md w-auto h-auto p-1 bg-green-500 hover:bg-green-600 text-white font-bold">
+                    <input type="submit" name="submit" value="Login" class="outline-none rounded-md w-auto h-auto p-1 bg-green-500 hover:bg-green-600 text-white font-bold">
                 <a href="register" class="text-sm font-serif font-extralight hover:underline hover:text-blue-500">Sign Up?</a>
                 </div>
             </form>
