--- a/djangoAdvanced/myapp/templates/homepage.html
+++ b/djangoAdvanced/myapp/templates/homepage.html
@@ -7,16 +7,15 @@
     {% tailwind_css %}
 </head>
 <body class="bg-gray-200 h-[100vh]">
-    <div class="flex justify-center items-center h-[100vh]">
-        <div class="bg-white p-10 rounded shadow-2xl">
-            <h1 class="text-3xl font-bold text-center">Welcome to my website</h1>
-            <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
-            <div class="flex justify-center items-center mt-5">
-                <a href="{% url 'login' %}" class="bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded">Login</a>
-                <a href="{% url 'register' %}" class="bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded ml-5">Register</a>
+    <div class="justify-center items-center bg-black bg-opacity-60 ">
+        <div class="bg-white p-10 rounded shadow-2xl flex-row my-auto">
+            <h1 class="text-3xl text-white font-bold text-center items-start justify-start my-auto m-2">Welcome to my website</h1>
+            <div class="flex justify-end items-end mt-5 flex-end">
+                <a href="{% url 'logout' %}" class="bg-blue-500 hover:bg-blue-600 text-white p-2 m-2 bg-red-400 rounded-lg hover:bg-red-600">Logout</a>
             </div>
         </div>
     </div>
+    <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
 </body>
 </html>
 {% endblock content%}
