modified the homepage

--- a/djangoAdvanced/myapp/templates/about.html
+++ b/djangoAdvanced/myapp/templates/about.html
@@ -7,11 +7,12 @@
     {% tailwind_css %}
 </head>
 <body class="bg-gray-100 h-[100vh]">
-    <div class="w-[80%]">
-        <h2 class="text-xl font-sans font-semibold">About Us</h2>
-        <p>At our company, we specialize in providing innovative and tailored solutions for Django projects. With a team of skilled developers and a passion for cutting-edge technologies, we excel in delivering high-quality web applications and services. Whether it's building robust e-commerce platforms, scalable social networks, or efficient content management systems, we take pride in harnessing the power of Django to create seamless and feature-rich solutions for our clients.
+    <div class="w-[70%] m-2 p-2 ">
+        <h2 class="text-2xl font-sans font-semibold mx-auto flex items-center justify-center">About Us</h2>
+        <p class="font-extralight text-black">At our company, we specialize in providing innovative and tailored solutions for Django projects. With a team of skilled developers and a passion for cutting-edge technologies, we excel in delivering high-quality web applications and services. Whether it's building robust e-commerce platforms, scalable social networks, or efficient content management systems, we take pride in harnessing the power of Django to create seamless and feature-rich solutions for our clients.
 
             Our commitment to excellence extends beyond just developing applications. We prioritize collaboration and open communication with our clients, ensuring a deep understanding of their unique needs and requirements. By combining our expertise in Django with a user-centric approach, we create engaging and intuitive interfaces that enhance user experiences and drive business success. With a track record of successful projects and a dedication to staying up-to-date with the latest advancements in the Django ecosystem, we are your ideal partner for all your Django-related endeavors. Let us turn your ideas into reality and take your web applications to the next level.</p>
     </div>
 </body>
+{% endblock %}
 </html>
