--- a/djangoAdvanced/myapp/templates/homepage.html
+++ b/djangoAdvanced/myapp/templates/homepage.html
@@ -7,15 +7,22 @@
     {% tailwind_css %}
 </head>
 <body class="bg-gray-200 h-[100vh]">
-    <div class="justify-center items-center bg-black bg-opacity-60 ">
-        <div class="bg-white p-10 rounded shadow-2xl flex-row my-auto">
-            <h1 class="text-3xl text-white font-bold text-center items-start justify-start my-auto m-2">Welcome to my website</h1>
-            <div class="flex justify-end items-end mt-5 flex-end">
-                <a href="{% url 'logout' %}" class="bg-blue-500 hover:bg-blue-600 text-white p-2 m-2 bg-red-400 rounded-lg hover:bg-red-600">Logout</a>
-            </div>
+    <div id='navbar' class="shadow-md h-[50px] p-2 mx-auto w-full flex flex-row justify-between bg-gradient-to-r from-green-300 to-transparent">
+        <div class="opacity-0">
+            <img src="{% static '/logo.png' %}" class="h-[50px] w-[50px]">
+        </div>
+        <div>
+            <h2 class="items-center justify-center flex mx-auto font-serif font-extrabold text-2xl">Welcome to the Theatre of Dreams</h2>
+        </div>
+        <div class="flex flex-row justify-end my-auto items-center space-x-3 text-xl font-serif font-extrabold">
+            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Home</a>
+            <a href={% url 'about' %} class="hover:underline-offset-1 hover:text-green-500">About</a>
+            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Services</a>
+            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Contact</a>
+            <a href="{% url 'logout' %}" class="hover:underline-offset-1 hover:text-red-500">Logout</a>
         </div>
     </div>
-    <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+    <p class="text-center m-2 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
 </body>
 </html>
 {% endblock content%}
