--- a/djangoAdvanced/myapp/templates/homepage.html
+++ b/djangoAdvanced/myapp/templates/homepage.html
@@ -15,7 +15,7 @@
             <h2 class="items-center justify-center flex mx-auto font-serif font-extrabold text-2xl">Welcome to the Theatre of Dreams</h2>
         </div>
         <div class="flex flex-row justify-end my-auto items-center space-x-3 text-xl font-serif font-extrabold">
-            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Home</a>
+            <a href={% url 'home' %} class="hover:underline-offset-1 hover:text-green-500">Home</a>
             <a href={% url 'about' %} class="hover:underline-offset-1 hover:text-green-500">About</a>
             <a href="#" class="hover:underline-offset-1 hover:text-green-500">Services</a>
             <a href="#" class="hover:underline-offset-1 hover:text-green-500">Contact</a>
