--- a/djangoAdvanced/myapp/templates/register.html
+++ b/djangoAdvanced/myapp/templates/register.html
@@ -15,8 +15,8 @@
             <h2 class="items-center justify-center flex mx-auto font-serif font-extrabold text-2xl">Welcome to the Theatre of Dreams</h2>
         </div>
         <div class="flex flex-row justify-end my-auto items-center space-x-3 text-xl font-serif font-extrabold">
-            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Home</a>
-            <a href="#" class="hover:underline-offset-1 hover:text-green-500">About</a>
+            <a href={% url 'home'%} class="hover:underline-offset-1 hover:text-green-500">Home</a>
+            <a href={% url 'about'%} class="hover:underline-offset-1 hover:text-green-500">About</a>
             <a href="#" class="hover:underline-offset-1 hover:text-green-500">Services</a>
             <a href="#" class="hover:underline-offset-1 hover:text-green-500">Contact</a>
         </div>
@@ -32,7 +32,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" class="outline-none rounded-md w-[300px] h-[50px] p-2">
                 <input type="password" name="confirmpassword" placeholder="Confirm Password" class=" outline-none rounded-md w-[300px] h-[50px] p-2">
                 {% comment %} {% load static %} {% endcomment %}
-                <img src="{% static '/eye.png'%}" class="hover:cursor-pointer" id="toggle"/>
+                {% comment %} <img src="{% static '/eye.png'%}" class="hover:cursor-pointer" id="toggle"/> {% endcomment %}
                 <div class="flex flex-row mx-auto items-center justify-center space-x-2">
                     <input type="submit" name="submit" value="Register" class=" outline-none rounded-md w-auto h-auto p-1 bg-green-500 hover:bg-green-600 text-white font-bold">
                 <a href="/" class="text-sm font-serif font-extralight hover:underline hover:text-blue-500">Sign In?</a>
