Separated the functionality of the navbar as an independent component

--- a/djangoAdvanced/myapp/templates/about.html
+++ b/djangoAdvanced/myapp/templates/about.html
@@ -7,6 +7,7 @@
     {% tailwind_css %}
 </head>
 <body class="bg-gray-100 h-[100vh]">
+    {% include 'navbar.html' %}
     <div class="w-[70%] m-2 p-2 ">
         <h2 class="text-2xl font-sans font-semibold mx-auto flex items-center justify-center">About Us</h2>
         <p class="font-extralight text-black">At our company, we specialize in providing innovative and tailored solutions for Django projects. With a team of skilled developers and a passion for cutting-edge technologies, we excel in delivering high-quality web applications and services. Whether it's building robust e-commerce platforms, scalable social networks, or efficient content management systems, we take pride in harnessing the power of Django to create seamless and feature-rich solutions for our clients.
