Added a contacts page

--- a/djangoAdvanced/myapp/templates/navbar.html
+++ b/djangoAdvanced/myapp/templates/navbar.html
@@ -18,7 +18,7 @@
             <a href={% url 'home' %} class="hover:underline-offset-1 hover:text-green-500">Home</a>
             <a href={% url 'about' %} class="hover:underline-offset-1 hover:text-green-500">About</a>
             <a href={% url 'services' %} class="hover:underline-offset-1 hover:text-green-500">Services</a>
-            <a href="#" class="hover:underline-offset-1 hover:text-green-500">Contact</a>
+            <a href={% url 'contact' %} class="hover:underline-offset-1 hover:text-green-500">Contact</a>
             <a href="{% url 'logout' %}" class="hover:underline-offset-1 hover:text-red-500">Logout</a>
         </div>
     </div>
