--- a/djangoAdvanced/myapp/templates/contact.html
+++ b/djangoAdvanced/myapp/templates/contact.html
@@ -8,10 +8,20 @@
 </head>
 <body class="bg-gray-200 h-[100vh]">
      {% include 'navbar.html' %}
-    <p class="text-center m-2 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+    {% comment %} <p class="text-center m-2 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p> {% endcomment %}
 </body>
 <footer class="bg-green-300 h-7 w-[80%] mx-auto flex items-center justify-center mt-[80%] p-2">
-    gh
+    <div class="flex flex-row justify-between mx-auto space-x-3 m-2 p-2">
+    <div class="items-start bg-gray-300 text-white p-2 rounded-lg hover:cursor-pointer font-semibold font-sans">
+        <p>Hello</p>
+    </div>
+    <div class="items-center bg-gray-300 text-white p-2 rounded-lg hover:cursor-pointer font-semibold font-sans">
+        <p>Hello, how is you!</p>
+    </div>
+    <div class="items-end bg-gray-300 text-white p-2 rounded-lg hover:cursor-pointer font-semibold font-sans">
+        <p>Hello</p>
+    </div>
+    <div>
 <footer>
 </html>
 {% endblock content%}
